LC Practice - 23rd Sept 2024

--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1389,18 +1389,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0971eed3",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def longestConsecutiveOpt2(nums: list[int]) -> int:\n",
     "    nums_set: set[int] = set(nums)\n",
-    "    result, cnt = 0, 0\n",
-    "    for curr in range(int(1e5) + 1):\n",
-    "        if curr in nums:\n",
-    "            cnt += 1\n",
-    "            result = max(result, cnt)\n",
-    "        else:\n",
-    "            cnt = 0\n",
+    "    result = 0\n",
+    "    for i in nums:\n",
+    "        # Start of a consequetive sequence\n",
+    "        if i - 1 not in nums_set:\n",
+    "            curr, count = i, 0\n",
+    "            while curr in nums_set:\n",
+    "                curr, count = curr + 1, count + 1\n",
+    "            result = max(result, count)\n",
     "\n",
     "    return result\n",
     "\n",
@@ -1408,6 +1411,198 @@
     "assert longestConsecutiveOpt2([0, 3, 7, 2, 5, 8, 4, 6, 0, 1]) == 9\n",
     "assert longestConsecutiveOpt2([100, 4, 200, 1, 3, 2]) == 4\n",
     "assert longestConsecutiveOpt2([1, 9, 3, 10, 4, 20, 2]) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f99c2ba",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestSubarray(nums: list[int], K: int) -> int:\n",
+    "    N = len(nums)\n",
+    "    max_length, curr_sum = 0, 0\n",
+    "    prefix_: dict[int, int] = {0: -1}\n",
+    "    for i in range(N):\n",
+    "        curr_sum += nums[i]\n",
+    "        target = curr_sum - K\n",
+    "        if target in prefix_:\n",
+    "            max_length = max(max_length, i - prefix_[target])\n",
+    "        prefix_[curr_sum] = min(i, prefix_.get(curr_sum, i))\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestSubarray([10, 5, 2, 7, 1, 9], 9) == 2\n",
+    "assert longestSubarray([10, 5, 2, 7, 1, 9], 15) == 4\n",
+    "assert longestSubarray([-3, -1, 2, 2], -4) == 2\n",
+    "assert longestSubarray([-3, 2, 1], 6) == 0\n",
+    "assert longestSubarray([-1, 1, 1], 1) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e3c4dd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def subarraySum(nums: list[int], K: int) -> int:\n",
+    "    prefix_sums: collections.defaultdict[int, int] = collections.defaultdict(int, {0: 1})\n",
+    "    result = total = 0\n",
+    "    for n in nums:\n",
+    "        total += n\n",
+    "        result += prefix_sums[total - K]\n",
+    "        prefix_sums[total] += 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert subarraySum([1,1,1], 2) == 2\n",
+    "assert subarraySum([1,2,3], 3) == 2\n",
+    "assert subarraySum([3,1,2,4], 6) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1287594a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def subarraysWithXorK(nums: list[int], K: int) -> int:\n",
+    "    prefix_sums: collections.defaultdict[int, int] = collections.defaultdict(int, {0: 1})\n",
+    "    curr: int = 0\n",
+    "    result: int = 0\n",
+    "    for n in nums:\n",
+    "        curr ^= n\n",
+    "        result += prefix_sums[curr ^ K]\n",
+    "        prefix_sums[curr] += 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert subarraysWithXorK([4, 2, 2, 6, 4], 6) == 4\n",
+    "assert subarraysWithXorK([5, 6, 7, 8, 9], 5) == 2\n",
+    "assert subarraysWithXorK([5, 2, 9], 7) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f2ed4c",
+   "metadata": {},
+   "source": [
+    "Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4728ba08",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def search(nums: list[int], target: int) -> int:\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if nums[mid] == target:\n",
+    "            return mid\n",
+    "        elif nums[mid] < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert search([-1,0,3,5,9,12], 9) == 4\n",
+    "assert search([-1,0,3,5,9,12], 2) == -1\n",
+    "assert search([-1,0,3,5,9,12], -1) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8372662",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def lowerBound(nums: list[int], X: int) -> int:\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if nums[mid] < X:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert lowerBound([1,2,2,3], 2) == 1\n",
+    "assert lowerBound([3,5,8,15,19], 9) == 3\n",
+    "assert lowerBound([3,5,8,15,19], 3) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "426c772b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def upperBound(nums: list[int], X: int) -> int:\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if nums[mid] <= X:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert upperBound([1,2,2,3], 2) == 3\n",
+    "assert upperBound([3,5,8,15,19], 9) == 3\n",
+    "assert upperBound([3,5,8,15,19], 3) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40be1c04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchInsert(nums: list[int], target: int) -> int:\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if nums[mid] < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert searchInsert([1,3,5,6], 5) == 2\n",
+    "assert searchInsert([1, 3, 5, 6], 2) == 1\n",
+    "assert searchInsert([1, 3, 5, 6], 7) == 4"
    ]
   }
  ],
