LC Practice - 25th Sept 2024

--- a/practice/009.ipynb
+++ b/practice/009.ipynb
@@ -1722,6 +1722,7 @@
      "iopub.status.idle": "2024-09-23T14:35:56.280971Z",
      "shell.execute_reply": "2024-09-23T14:35:56.280484Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011142,
      "end_time": "2024-09-23T14:35:56.281854",
@@ -1748,6 +1749,102 @@
     "assert searchInsert([1,3,5,6], 5) == 2\n",
     "assert searchInsert([1, 3, 5, 6], 2) == 1\n",
     "assert searchInsert([1, 3, 5, 6], 7) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea5a600",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def getFloorAndCeil(nums: list[int], X: int):\n",
+    "    N = len(nums)\n",
+    "    LB = bisect.bisect_left(nums, X)\n",
+    "    if X < nums[0]:\n",
+    "        return -1, nums[0]\n",
+    "    elif nums[-1] < X:\n",
+    "        return nums[-1], -1\n",
+    "    elif nums[LB] == X:\n",
+    "        return X, X\n",
+    "    else:\n",
+    "        return nums[LB - 1], nums[LB]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getFloorAndCeil([3, 4, 4, 7, 8, 8], 5) == (4, 7)\n",
+    "assert getFloorAndCeil([3, 4, 4, 7, 8, 10], 8) == (8, 8)\n",
+    "assert getFloorAndCeil([3, 4, 4, 7, 8, 10], 12) == (10, -1)\n",
+    "assert getFloorAndCeil([3, 4, 4, 7, 8, 10], 2) == (-1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ca825d0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def searchRange(nums: list[int], target: int) -> tuple[int, int]:\n",
+    "    N = len(nums)\n",
+    "    LB, UB = bisect.bisect_left(nums, target), bisect.bisect_right(nums, target)\n",
+    "    if LB == N or nums[LB] != target:\n",
+    "        return -1, -1\n",
+    "    else:\n",
+    "        return LB, UB - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert searchRange([5, 7, 7, 8, 8, 10], 8) == (3, 4)\n",
+    "assert searchRange([5, 7, 7, 8, 8, 10], 6) == (-1, -1)\n",
+    "assert searchRange([5, 7, 7, 8, 8, 10], 5) == (0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387f770f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchSorted(nums: list[int], K: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Trick here is to realize that the even tho we have the nums rotated,\n",
+    "    either left half or the right half would still remain sorted.\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "\n",
+    "        # Mid is K\n",
+    "        if nums[mid] == K:\n",
+    "            return mid\n",
+    "\n",
+    "        # Left half if sorted\n",
+    "        elif nums[low] < nums[mid]:\n",
+    "            # K lies within sorted range\n",
+    "            if nums[low] <= K <= nums[mid]:\n",
+    "                high = mid - 1\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        # Right half is sorted\n",
+    "        else:\n",
+    "            # K lies within sorted range\n",
+    "            if nums[mid] <= K <= nums[high]:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert searchSorted([4, 5, 6, 7, 0, 1, 2], 0) == 4\n",
+    "assert searchSorted([4, 5, 6, 7, 0, 1, 2], 3) == -1\n",
+    "assert searchSorted([4, 5, 6, 7, 0, 1, 2], 5) == 1"
    ]
   }
  ],
