--- a/practice/010.ipynb
+++ b/practice/010.ipynb
@@ -253,6 +253,7 @@
      "iopub.status.idle": "2024-09-26T03:10:22.424790Z",
      "shell.execute_reply": "2024-09-26T03:10:22.424344Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007666,
      "end_time": "2024-09-26T03:10:22.425681",
@@ -300,6 +301,143 @@
     "assert maxSubArray([1]) == 1\n",
     "assert maxSubArray([5,4,-1,7,8]) == 23\n",
     "assert maxSubArray([-3,-2,-1]) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9fc27a7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxProduct(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    If even num of -ve, ans is product of all\n",
+    "    If odd num of -ve, ans is either the prefix prod or postfix prod\n",
+    "\n",
+    "    How to handle zeros? Zeros can never be part of ans. Reset accumulator to 1 if hit 0\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    result = nums[0]\n",
+    "\n",
+    "    # Calculate prefix and postfix in the same loop\n",
+    "    # Note that postfix and prefix here are not related to one another\n",
+    "    # We are simply doing two distinct ops in same loop\n",
+    "    pre = post = 1\n",
+    "    for i in range(N):\n",
+    "        pre *= nums[i]\n",
+    "        post *= nums[N - i - 1]\n",
+    "        result = max(pre, post, result)\n",
+    "        if pre == 0:\n",
+    "            pre = 1\n",
+    "        if post == 0:\n",
+    "            post = 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxProduct([2,3,-2,4]) == 6\n",
+    "assert maxProduct([-2,0,-1]) == 0\n",
+    "assert maxProduct([-1,-2,3]) == 6\n",
+    "\n",
+    "def maxProductKadane(nums: list[int]) -> int:\n",
+    "    min_ = max_ = result = nums[0]\n",
+    "    for i in range(1, len(nums)):\n",
+    "        min_, max_ = min(nums[i], min_ * nums[i], max_ * nums[i]), max(nums[i], min_ * nums[i], max_ * nums[i])\n",
+    "        result = max(result, max_)\n",
+    "        if min_ == 0:\n",
+    "            min_ = 1\n",
+    "        if max_ == 0:\n",
+    "            max_ = 1\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxProductKadane([2,3,-2,4]) == 6\n",
+    "assert maxProductKadane([-2,0,-1]) == 0\n",
+    "assert maxProductKadane([-1,-2,3]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68f3ae11",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def findMin(nums: list[int]) -> int:\n",
+    "    min_ = nums[0]\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "\n",
+    "        # Already sorted\n",
+    "        if nums[low] <= nums[high]:\n",
+    "            return min(min_, nums[low])\n",
+    "\n",
+    "        # Left half is sorted, take min and\n",
+    "        # continue searching on right half\n",
+    "        elif nums[low] <= nums[mid]:\n",
+    "            min_ = min(min_, nums[low])\n",
+    "            low = mid + 1\n",
+    "\n",
+    "        # Right half is sorted, take min\n",
+    "        # and continue searching left half\n",
+    "        else:\n",
+    "            min_ = min(min_, nums[mid])\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return min_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findMin([3,4,5,1,2]) == 1\n",
+    "assert findMin([4,5,6,7,0,1,2]) == 0\n",
+    "assert findMin([11,13,15,17]) == 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "691d4003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchRotated(nums: list[int], target: int) -> int:\n",
+    "    low, high = 0, len(nums) - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        # Mid contains target, return\n",
+    "        if nums[mid] == target:\n",
+    "            return mid\n",
+    "\n",
+    "        # Left half is sorted\n",
+    "        elif nums[low] <= nums[mid]:\n",
+    "            # target lies within the left portion\n",
+    "            if nums[low] <= target <= nums[mid]:\n",
+    "                high = mid - 1\n",
+    "            # target lies out left portion, need to search right\n",
+    "            else:\n",
+    "                low = mid + 1\n",
+    "\n",
+    "        # Right half is sorted\n",
+    "        else:\n",
+    "            # target lies with sorted range\n",
+    "            if nums[mid + 1] <= target <= nums[high]:\n",
+    "                low = mid + 1\n",
+    "            # target lies outside right portion, search left\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert searchRotated([4,5,6,7,0,1,2], 0) == 4\n",
+    "assert searchRotated([4,5,6,7,0,1,2], 3) == -1\n",
+    "assert searchRotated([1], 0) == -1"
    ]
   }
  ],
