--- a/practice/010.ipynb
+++ b/practice/010.ipynb
@@ -438,6 +438,7 @@
      "iopub.status.idle": "2024-09-27T02:15:00.728995Z",
      "shell.execute_reply": "2024-09-27T02:15:00.728523Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008818,
      "end_time": "2024-09-27T02:15:00.729796",
@@ -481,6 +482,262 @@
     "assert searchRotated([4,5,6,7,0,1,2], 0) == 4\n",
     "assert searchRotated([4,5,6,7,0,1,2], 3) == -1\n",
     "assert searchRotated([1], 0) == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc8f7b8f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def threeSum(nums: list[int]) -> set[tuple[int, int, int]]:\n",
+    "    N = len(nums)\n",
+    "\n",
+    "    # Crucial to sort it\n",
+    "    nums.sort()\n",
+    "\n",
+    "    result: set[tuple[int, int, int]] = set()\n",
+    "    i = 0\n",
+    "    while i < N:\n",
+    "        left = nums[i]\n",
+    "        j, k = i + 1, N - 1\n",
+    "        while j < k:\n",
+    "            mid, right = nums[j], nums[k]\n",
+    "            total = left + mid + right\n",
+    "            triplet = sorted((left, mid, right))\n",
+    "            if total == 0:\n",
+    "                result.add((triplet[0], triplet[1], triplet[2]))\n",
+    "                while j < k and nums[j] == mid:\n",
+    "                    j += 1\n",
+    "                while j < k and nums[k] == right:\n",
+    "                    k -= 1\n",
+    "            elif total < 0:\n",
+    "                while j < k and nums[j] == mid:\n",
+    "                    j += 1\n",
+    "            else:\n",
+    "                while j < k and nums[k] == right:\n",
+    "                    k -= 1\n",
+    "\n",
+    "        while i < N and nums[i] == left:\n",
+    "            i += 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert threeSum([-1,0,1,2,-1,-4]) == {(-1,0,1),(-1,-1,2)}\n",
+    "assert threeSum([0,1,1]) == set()\n",
+    "assert threeSum([0,0,0]) == {(0,0,0)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28c93626",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxArea(heights: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Two pointer solution\n",
+    "    Area equals to the height (min height of both boundaries) * width\n",
+    "\n",
+    "    At first step we compute the area, this would have the maximum width and would be a worthy contender of our quest to find the max area.\n",
+    "\n",
+    "    Now we want to find area that is greater than what we currently have, width is going to decrease but atleast we can ensure that height is improved\n",
+    "    by retaining the side with greater height.\n",
+    "    \"\"\"\n",
+    "    i, j = 0, len(heights) - 1\n",
+    "    max_area = 0\n",
+    "    while i < j:\n",
+    "        max_area = max(max_area, min(heights[i], heights[j]) * (j - i))\n",
+    "        if heights[i] < heights[j]:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j -= 1\n",
+    "\n",
+    "    return max_area\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxArea([1,8,6,2,5,4,8,3,7]) == 49\n",
+    "assert maxArea([1,1]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd51a3a",
+   "metadata": {},
+   "source": [
+    "#### Bit Manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4601131",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def add(a: int, b: int) -> int:\n",
+    "    # https://leetcode.com/problems/sum-of-two-integers/solutions/489210/read-this-if-you-want-to-learn-about-masks\n",
+    "\n",
+    "    # Each F adds 4 1s, 32 bit 1s\n",
+    "    mask = 0xffffffff\n",
+    "\n",
+    "    # Actual operation\n",
+    "    while (b & mask) > 0:\n",
+    "        a, b = a ^ b, (a & b) << 1\n",
+    "\n",
+    "    return a & mask if b > 0 else a\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert add(1, 3) == 4\n",
+    "assert add(3, 5) == 8\n",
+    "assert add(-1, 1) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26a199eb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def hammingWeight(n: int) -> int:\n",
+    "    \"\"\"\n",
+    "    # Typical Approach\n",
+    "\n",
+    "    bits = 0\n",
+    "    while n:\n",
+    "        bits += n & 1\n",
+    "        n >>= 1\n",
+    "    return bits\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Doing a n & (n - 1) always removes the right most set bit.\n",
+    "\n",
+    "    1000100 & (1000100 - 1) = 1000000\n",
+    "    \"\"\"\n",
+    "    bits = 0\n",
+    "    while n:\n",
+    "        bits, n = bits + 1, n & (n - 1)\n",
+    "    return bits\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert hammingWeight(11) == 3\n",
+    "assert hammingWeight(128) == 1\n",
+    "assert hammingWeight(2147483645) == 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ff68b7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countBits(N: int) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Had to do a fair bit writing the code on 'paper'\n",
+    "    Basically the bits seem to add up from previous result\n",
+    "\n",
+    "    Actually on reading tutorials, looks like it can be much simpler - arr[i // 2] or arr[i // 2]\n",
+    "    \"\"\"\n",
+    "    res: list[int] = [0]\n",
+    "    look_back = 1\n",
+    "    for i in range(1, N + 1):\n",
+    "        if i == 2 * look_back:\n",
+    "            look_back <<= 1\n",
+    "        res.append(res[i - look_back] + 1)\n",
+    "    return res\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countBits(2) == [0,1,1]\n",
+    "assert countBits(5) == [0,1,1,2,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ce20b10",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def missingNumber(nums: list[int]) -> int:\n",
+    "    # x ^ x = 0\n",
+    "    N = len(nums)\n",
+    "    xor = functools.reduce(lambda x, y: x ^ y, range(N + 1), 0)\n",
+    "    for n in nums:\n",
+    "        xor ^= n\n",
+    "    return xor\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert missingNumber([3,0,1]) == 2\n",
+    "assert missingNumber([0,1]) == 2\n",
+    "assert missingNumber([9,6,4,2,3,5,7,0,1]) == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edb1ea7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def reverseBits(N: int) -> int:\n",
+    "    rev = 0\n",
+    "    for i in range(32):\n",
+    "        rev = (rev << 1) | N & 1\n",
+    "        N = N >> 1\n",
+    "\n",
+    "    return rev\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reverseBits(4294967293) == 3221225471\n",
+    "assert reverseBits(43261596) == 964176192"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55902b2c",
+   "metadata": {},
+   "source": [
+    "#### DP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5a784e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def climbStairs(N: int) -> int:\n",
+    "    # Fibonacci sequence\n",
+    "    prev = curr = 1\n",
+    "    for i in range(N - 1):\n",
+    "        prev, curr = curr, curr + prev\n",
+    "    return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert climbStairs(2) == 2\n",
+    "assert climbStairs(3) == 3\n",
+    "assert climbStairs(9) == 55"
    ]
   }
  ],
